rename to knowmore

--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,7 +1,7 @@
 <!-- Banner -->
 <section id="banner">
 	<div class="inner">
-		<h2>Shoshin</h2>
+		<h2 class="logo">Knowmore</h2>
 		<p>Data Analytics Curation for Social Good</p>
 		<ul class="actions">
 			<li><a href="#" class="button special">Join</a></li>
