--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}" />
 	<!--[if lte IE 8]><link rel="stylesheet" href="{{ "/assets/css/ie8.css" | relative_url }}" /><![endif]-->
 	<!--[if lte IE 9]><link rel="stylesheet" href="{{ "/assets/css/ie9.css" | relative_url }}" /><![endif]-->
+	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-108633754-1"></script>
 	<script>
 	  window.dataLayer = window.dataLayer || [];
