--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -2,7 +2,7 @@
 <section id="banner">
 	<div class="inner">
 		<h2 class="logo">Knowmore</h2>
-		<p>Data Analytics Curation for Social Good</p>
+		<p>Helping missiong-driven organizations make data-driven decisions</p>
 		<ul class="actions">
 			<li><a href="https://join.slack.com/t/knowmoredata/shared_invite/enQtMjU5MjE0NzIzMTcyLTI3YmZmMWU3MDlmMmI3OTU2MDEyZDk2NDU1ODc4NDMxMTc4NzExNWEzYzM0NWU2NWM5Y2JjNWZiMjllYzM1ZDc" target="_blank" class="button special">Join</a></li>
 		</ul>
