--- a/_includes/section-one.html
+++ b/_includes/section-one.html
@@ -1,8 +1,9 @@
 <!-- One -->
 <section id="one" class="wrapper style1 special">
-	<h2 style="margin-bottom: 2rem">What is Social Impact</h2>
+	<h2 style="margin-bottom: 2rem">What we do</h2>
 	<div class="inner">
-		<iframe class="frame" width="672" height="378" src="https://www.youtube.com/embed/qf1OP7NOcDE?rel=0&amp;controls=0" frameborder="1"></iframe>
+		<p>Knowmore works with nonprofits and other mission-driven organizations both big and small to enable them to use data to drive their decision making. Many in these industries are not taking full advantage of data science because 1: they don't understand it fully, and 2: they don't have the resources. By connecting data scientists and engineers with socially impactful projects, we provide opportunities to leverage the power of data towards bettering humanity.</p>
+		<iframe class="frame" src="https://www.youtube.com/embed/qf1OP7NOcDE?rel=0&amp;controls=0" frameborder="1"></iframe>
 	</div>
 	<a href="http://goo.gl/FaAqtg" target="_blank" class="button icon fa-download" style="margin-top: 3rem">Download Whitepaper</a>
 </section>
