--- a/_includes/section-three.html
+++ b/_includes/section-three.html
@@ -2,17 +2,16 @@
 <section id="three" class="wrapper style3 special">
 	<div class="inner">
 		<header class="major">
-			<h2>Accumsan mus tortor nunc aliquet</h2>
-			<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br /> fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+			<h2>How it works</h2>
 		</header>
 		<ul class="features">
 			<li class="icon fa-paper-plane-o">
-				<h3>Arcu accumsan</h3>
-				<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+				<h3>Create a data request</h3>
+				<p>Beneficiaries consult with Knowmore to come up with a compelling story for data-driven effectiveness. A request is created highlighting what the current pains are, how a data solution will help, and the impactful actions that will result from completion of the request.</p>
 			</li>
 			<li class="icon fa-laptop">
-				<h3>Ac Augue Eget</h3>
-				<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+				<h3>Community Endorsement</h3>
+				<p>With a compelling request, .</p>
 			</li>
 			<li class="icon fa-code">
 				<h3>Mus Scelerisque</h3>
@@ -20,14 +19,6 @@
 			</li>
 			<li class="icon fa-headphones">
 				<h3>Mauris Imperdiet</h3>
-				<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-			</li>
-			<li class="icon fa-heart-o">
-				<h3>Aenean Primis</h3>
-				<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-			</li>
-			<li class="icon fa-flag-o">
-				<h3>Tortor Ut</h3>
 				<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
 			</li>
 		</ul>
