--- a/_includes/section-two.html
+++ b/_includes/section-two.html
@@ -1,4 +1,5 @@
 <section id="two" class="wrapper alt style2">
+	<h2 class="spotlightheader">Our Community</h2>
 
 	{% for post in site.posts limit:site.tiles-count %}{% if site.tiles-source == 'posts' %}
 
