add section three, some copy changes

--- a/_includes/section-three.html
+++ b/_includes/section-three.html
@@ -1,25 +1,40 @@
 <!-- Three -->
-<section id="three" class="wrapper style3 special">
+<section id="three" class="wrapper style1 special">
 	<div class="inner">
 		<header class="major">
 			<h2>How it works</h2>
+			<p>Knowmore enables mission-driven organizations and groups to crowdsource data
+analysis by hosting data requests. Requests are endorsed by the staking of Reputation tokens from
+community members as representation of community alignment with the project. At project end,
+the endorsers receive the funds donated to the project in exchange for their
+staked Reputation. The token pool is then distributed to project collaborators as recognition for their
+work and a measure of Reputation. In this way, Knowmore incentivizes collaborator contribution through a socioeconomic feedback loop that promotes a meritocratic hierarchy where influence organically
+transitions to those of experience and impact.</p>
 		</header>
 		<ul class="features">
-			<li class="icon fa-paper-plane-o">
-				<h3>Create a data request</h3>
-				<p>Beneficiaries consult with Knowmore to come up with a compelling story for data-driven effectiveness. A request is created highlighting what the current pains are, how a data solution will help, and the impactful actions that will result from completion of the request.</p>
+			<li class="icon fa-globe">
+				<h3>Data Requests</h3>
+				<p>Beneficiaries consult with Knowmore to come up with a compelling story for data-driven impact. A request is created highlighting what the problem is, why a data solution is helpful, and the actions that will result from completion of the request.</p>
 			</li>
-			<li class="icon fa-laptop">
-				<h3>Community Endorsement</h3>
-				<p>With a compelling request, .</p>
+			<li class="icon fa-support">
+				<h3>Endorsements</h3>
+				<p>The community organizes around requests based on alignment to the cause, its impact, and its feasability. They endorse projects by staking their reputation, and participating towards it's completion. The more compelling a request, the more endorsement and resources it will get.</p>
 			</li>
-			<li class="icon fa-code">
-				<h3>Mus Scelerisque</h3>
-				<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+			<li class="icon fa-area-chart">
+				<h3>Data Analytics Curation</h3>
+				<p>The Collaboration Platform curates data analytics through a series of phases. This includes data discovery and cleansing, feature engineering, infrastructure architecting, model building, visualization, and conclusion drawing - each with a community-determined weighting of importance.</p>
 			</li>
-			<li class="icon fa-headphones">
-				<h3>Mauris Imperdiet</h3>
-				<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+			<li class="icon fa-star">
+				<h3>Collaborator Reputation</h3>
+				<p>Reputation is earned when projects complete succesfully. It is earned through votes provided by fellow collaborators for contributions made towards a project. The more reputation, the stronger the vote - and the more potential to endorse future projects.</p>
+			</li>
+			<li class="icon fa-heart">
+				<h3>Senseful Donations</h3>
+				<p>Donors help keep the system running. They are made on a project-by-project basis and go directly to the community following project completion. There is a public record of donations made, and how they were distributed, keeping the system as transparent as possible.</p>
+			</li>
+			<li class="icon fa-universal-access">
+				<h3>Collaborative Discovery</h3>
+				<p>Knowmore houses an index of public data sets for convenient discovery, along with a suite of integrations for code sharing, testing, and deployment for effective collaboration.</p>
 			</li>
 		</ul>
 	</div>
